test(user): add unit tests for UserServiceImpl methods